--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
   "dependencies": {
     "aws-sdk": "2.327.0",
     "bluebird": "3.5.2",
-    "browsertime": "3.12.0",
+    "browsertime": "file:/usr/src/app/browsertime/",
     "cli-color": "1.3.0",
     "concurrent-queue": "7.0.2",
     "dayjs": "1.7.7",
